force-app/main/default/objects/Opportunity/fields/CPQ2_ASN__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_ASN__c</fullName>
    <description>1 - Green
2 - Yellow
3 - Red
4 - Requires Adjustment to Proceed</description>
    <formula>IF( CPQ2_UPMS__c &amp;&amp; CPQ2_STS__c &lt; $Setup.CPQ_Settings__c.CPQ_T3__c
,4

,IF(NOT(CPQ2_FA__c) ||  CPQ2_MCT__c  = 2
,3

,IF(NOT(CPQ2_UPMS__c) &amp;&amp; CPQ2_MCT__c  = 0
,1

,IF(NOT(CPQ2_UPMS__c) &amp;&amp; CPQ2_MCT__c =1
,2

,IF(CPQ2_STS__c &gt;= MIN( BLANKVALUE(CPQ2_SSA__c, 100) ,$Setup.CPQ_Settings__c.CPQ_T1__c)&amp;&amp; CPQ2_MCT__c =0
,1

,IF(CPQ2_STS__c &gt;= $Setup.CPQ_Settings__c.CPQ_T2__c
,2

,3

)
)
)
)
)
)</formula>
    <label>Approval Status Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>