force-app/main/default/objects/Opportunity/fields/CPQ2_FA__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_FA__c</fullName>
    <formula>IF( TEXT(Account.FSA_Mapping__r.CPQ_Service_Zone__c) = $Setup.CPQ_Settings__c.CPQ_OSAZ__c , IF( Account.FSA_Mapping__r.FSA__c = CPQ2_FAS__c , true, false ), true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSA Approval Met</label>
    <type>Checkbox</type>
</CustomField>