force-app/main/default/objects/Opportunity/fields/CPQ2_UPMS__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_UPMS__c</fullName>
    <description>Determines if the price model should be taken into account for the approval process</description>
    <formula>if( CPQ2_HC__c = 0 ||  Account.CPQ2_HSO__c ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Price Model Score</label>
    <type>Checkbox</type>
</CustomField>