force-app/main/default/objects/Opportunity/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual In Advance (Direct Debit)</fullName>
            </value>
            <value>
                <fullName>Annual In Advance</fullName>
                <label>Annual In Advance (Invoice)</label>
            </value>
            <value>
                <fullName>6 Months In Advance (Direct Debit)</fullName>
            </value>
            <value>
                <fullName>6 Months In Advance</fullName>
                <label>6 Months In Advance (Invoice)</label>
            </value>
            <value>
                <fullName>Quarterly In Advance (Direct Debit)</fullName>
            </value>
            <value>
                <fullName>Quarterly In Advance</fullName>
                <label>Quarterly In Advance (Invoice)</label>
            </value>
            <value>
                <fullName>Monthly In Advance (Direct Debit)</fullName>
            </value>
            <value>
                <fullName>Monthly In Advance</fullName>
                <label>Monthly In Advance (Invoice)</label>
            </value>
            <value>
                <fullName>Other (please state)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>