force-app/main/default/objects/Opportunity/fields/Invoice_Frequency_Other__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency_Other__c</fullName>
    <label>Invoice Frequency Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>