force-app/main/default/objects/Opportunity/fields/Number_of_new_sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_new_sites__c</fullName>
    <description>Capture for admin for number of new site locations added</description>
    <inlineHelpText>Please insert the number of new sites set up or input 0 for existing sites</inlineHelpText>
    <label>Number of new sites</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>