force-app/main/default/objects/Opportunity/fields/ShipTo_same_as_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_same_as_Legal_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>*Please tick the box if this is the same as the Legal Entity of the Account*</inlineHelpText>
    <label>ShipTo same as Legal Entity</label>
    <type>Checkbox</type>
</CustomField>