force-app/main/default/objects/Opportunity/fields/ShipTo_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Zip_Postal_Code__c</fullName>
    <label>ShipTo Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>