force-app/main/default/objects/Opportunity/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <formula>TEXT(Account.Subsidiary__c)</formula>
    <formulaTreatBlanksAs></formulaTreatBlanksAs>
    <label>Subsidiary</label>
    <type>Text</type>
</CustomField>