force-app/main/default/objects/Opportunity/recordTypes/Frequency_Change_Penetration.recordType-meta.xml
<RecordType>
    <fullName>Frequency_Change_Penetration</fullName>
    <active>true</active>
    <businessProcess>Frequency Change Process</businessProcess>
    <description>Opportunity to capture changes to frequency or quantity on existing orders or service additions of the same subcategory (i.e. client is a current personal hygiene disposal customer and wishes to add two units to another washroom)</description>
    <label>Changes to an Existing Service Subcategory</label>
</RecordType>