force-app/main/default/objects/Opportunity/recordTypes/New_Conversion_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>New_Conversion_Opportunity</fullName>
    <active>true</active>
    <businessProcess>New Conversion Opportunity Process</businessProcess>
    <description>New site, new logo, new line of business, new consumables, all equipment, all one-time services</description>
    <label>New Conversion Opportunity</label>
</RecordType>