force-app/main/default/objects/Opportunity/validationRules/Cannot_Edit_Closed_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Closed_Opportunity</fullName>
    <active>true</active>
    <description>Prohibits users from changing a closed opportunity</description>
    <errorConditionFormula>AND(
PRIORVALUE(IsClosed)= TRUE,
Subsidiary__c = &apos;US&apos;,
OR(MONTH(CloseDate) &lt;&gt; MONTH(TODAY()),YEAR(CloseDate) &lt;&gt; YEAR(TODAY())), 
!$Permission.Allow_edit_on_opportunity_after_close 
)</errorConditionFormula>
    <errorMessage>You cannot edit an Opportunity once it has been closed</errorMessage>
</ValidationRule>