force-app/main/default/objects/Opportunity/validationRules/check_account_billing_address.validationRule-meta.xml
<ValidationRule>
    <fullName>check_account_billing_address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Subsidiary__c = &apos;CA&apos;,
OR( ISNEW() , ISCHANGED(ForecastCategoryName) ),
(RecordTypeId !=
$Setup.Field_Service_Settings__c.Opportunity_RecordType_Frequency_Change__c) ,
Account.RecordType.DeveloperName != &apos;Customer_Ship_To&apos;,
OR(
ISPICKVAL(ForecastCategoryName , &apos;Closed&apos;) ,
ISPICKVAL(ForecastCategoryName , &apos;Commit&apos;)
),
AND(ISBLANK( Account.BillingCity ), ISBLANK( Account.BillingStreet )
, ISBLANK( Account.BillingPostalCode ), ISBLANK( Account.BillingState ),ISBLANK( Account.BillingCountry))
)</errorConditionFormula>
    <errorMessage>Please ensure that the associated Account has all Billing Address Fields filled in before switching Opportunity to Commit/Closed Forecast Categories.</errorMessage>
</ValidationRule>