force-app/main/default/objects/Opportunity/validationRules/check_account_shipping_address.validationRule-meta.xml
<ValidationRule>
    <fullName>check_account_shipping_address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Subsidiary__c = &apos;CA&apos;,
OR( ISNEW() ,  ISCHANGED(ForecastCategoryName) ),
(RecordTypeId !=
$Setup.Field_Service_Settings__c.Opportunity_RecordType_Frequency_Change__c) ,
OR(
ISPICKVAL(ForecastCategoryName , &apos;Closed&apos;) ,
ISPICKVAL(ForecastCategoryName , &apos;Commit&apos;)
),
AND(ISBLANK(  Account.ShippingStreet), ISBLANK(  Account.ShippingCity)
, ISBLANK(  Account.ShippingCountry), ISBLANK(  Account.ShippingPostalCode),ISBLANK(  Account.ShippingState))
)</errorConditionFormula>
    <errorMessage>Please ensure that associated Shipping Account and Billing Account has all Shipping Address Fields and Billing Address Fields filled in, respectively, before switching Opportunity to Commit/Closed</errorMessage>
</ValidationRule>