force-app/main/default/objects/Opportunity/validationRules/Invoice_Frequency_Other_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Frequency_Other_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Subsidiary__c = &apos;UK&apos;,
ISPICKVAL(Invoice_Frequency__c , &quot;Other (please state)&quot;),
ISBLANK( Invoice_Frequency_Other__c )
)</errorConditionFormula>
    <errorMessage>Please fill in &quot;Invoice Frequency Other&quot;</errorMessage>
</ValidationRule>