force-app/main/default/objects/Opportunity/validationRules/No_Stage_Change_for_Signed_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Stage_Change_for_Signed_Opportunity</fullName>
    <active>true</active>
    <description>An Opportunity that is signed cannot change its stage</description>
    <errorConditionFormula>AND(
 Subsidiary__c = &apos;CA&apos;,
AND( TEXT( StageName ) = $Setup.Field_Service_Settings__c.Opportunity_Case_Rejection_Stage_Name__c , 
ISCHANGED(StageName ) , 
TEXT( PRIORVALUE( StageName ) ) &lt;&gt; 
$Setup.Field_Service_Settings__c.Opportunity_Case_Creation_Stage_Name__c),AND( TEXT( StageName ) = $Setup.Field_Service_Settings__c.Opportunity_Case_Rejection_Stage_Name__c , 
ISCHANGED(StageName ) , 
TEXT( PRIORVALUE( StageName ) ) &lt;&gt; 
$Setup.Field_Service_Settings__c.Opportunity_Frequency_Change_Stage_Name__c))</errorConditionFormula>
    <errorMessage>Stage Name Unavailable for Selection</errorMessage>
</ValidationRule>