force-app/main/default/objects/Opportunity/validationRules/Number_of_new_sites_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_new_sites_required</fullName>
    <active>true</active>
    <description>Trigger to alert admin to complete the number of new sites they have created</description>
    <errorConditionFormula>ISPICKVAL(Processing_Status__c,&quot;completed&quot;)&amp;&amp;
ISBLANK( Number_of_new_sites__c) &amp;&amp;
Subsidiary__c = &apos;UK&apos;</errorConditionFormula>
    <errorDisplayField>Number_of_new_sites__c</errorDisplayField>
    <errorMessage>Please insert the number of new sites set up or input 0 for existing sites</errorMessage>
</ValidationRule>