force-app/main/default/objects/Opportunity/validationRules/Opportunity_cant_have_StandardPricebook.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_cant_have_StandardPricebook</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 Subsidiary__c = &apos;CA&apos;,
TEXT(ForecastCategoryName)=&apos;Closed&apos;, 
Pricebook2Id =  $Setup.Field_Service_Settings__c.Default_Order_Price_Book_ID__c 
)</errorConditionFormula>
    <errorMessage>Opportunity Pricebook should be Sales Pricebook</errorMessage>
</ValidationRule>