force-app/main/default/objects/Opportunity/validationRules/Prevent_Closed_Stage_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Closed_Stage_Change</fullName>
    <active>true</active>
    <description>Prevent users from changing Stage &apos;Closed-Site Survey Rejected&apos; to any other except &apos;Signed Awaiting Site Survey Approval&apos;</description>
    <errorConditionFormula>AND( 
 Subsidiary__c = &apos;CA&apos;,
ISCHANGED(StageName), 
(Text(PRIORVALUE(StageName)) = &apos;Closed - Site Survey Rejected&apos;), 
NOT((Text(StageName)=&apos;Signed Awaiting Survey Approval&apos;)), 
CASESAFEID( RecordTypeId ) &lt;&gt; $Setup.Field_Service_Settings__c.Opportunity_RecordType_Frequency_Change__c 
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Value not available for selection</errorMessage>
</ValidationRule>