force-app/main/default/objects/Opportunity/validationRules/Reason_Lost_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Lost_Required</fullName>
    <active>true</active>
    <description>Ensures users select a reason lost when an opportunity is closed lost</description>
    <errorConditionFormula>AND(
OR( Subsidiary__c = &apos;UK&apos;, Subsidiary__c = &apos;US&apos;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
ISPICKVAL(Loss_Reason__c , &quot;&quot;) 
)</errorConditionFormula>
    <errorMessage>Select a value in the &quot;Reasons Lost&quot; field</errorMessage>
</ValidationRule>